--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js"
+    "start": "node build/index.js"
+    
   },
   "keywords": [],
   "author": "",
